...
    return RefreshIndicator(
      color: AppColor.accent,
      onRefresh: () async => await onRefresh(postListNotifier),
      child: Scrollbar(
        controller: scrollController,
        child: ListView.builder(
          key: Key("post-list-view"),
          controller: scrollController,
          padding: EdgeInsets.symmetric(
            horizontal: orientation == Orientation.landscape ? 250 : 16,
          ),
          itemCount: posts.length + 1,
          itemBuilder: (context, index) {
...
